<resources>
    <string name="app_name">G-Coster</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="location_msg">For a better experience, turn on device location, which uses Googls\'s location service</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No, thanks</string>
    <string name="retry">Retry</string>
    <string name="fail">Error</string>
    <string name="net_work_error">Network Error</string>
    <string name="error_title">Oops!!</string>
    <string name="session_expired_title">Session Expired</string>
    <string name="session_expired">Your session has expired due to another device has logged into this account. Please log in again to continue.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="g_coaster">G-COSTER</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="selling_prize">Selling Prize</string>
    <string name="cost_prize">Cost Prize</string>
    <string name="code">Code</string>
    <string name="add_item">Add Item</string>
    <string name="field_missing">Field Missing</string>
    <string name="color">Color</string>
    <string name="cost">Cost</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="add">ADD</string>
    <string name="minus">MINUS</string>
    <string name="cart">Cart</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure remove the item from Cart</string>
    <string name="delete_confirmation_">Are you sure you want to delete the item?</string>
    <string name="yes">YES</string>
    <string name="cart_is_empty">Cart is Empty!!</string>
    <string name="checkout">CHECKOUT</string>
    <string name="total">Total</string>
    <string name="discount_in_percentage">Discount in Percentage</string>
    <string name="discount_in_rupees">Discount in Rupees</string>
    <string name="roundoff">Roundoff</string>
    <string name="grant_total">Grant Total</string>
    <string name="success">Success</string>
    <string name="go_back">Go Back</string>
    <string name="done">DONE</string>
    <string name="total_sale">Total Sale Today</string>
    <string name="no_of_bills">No of Bills</string>
    <string name="report">Report</string>
    <string name="loading">Loading</string>

</resources>