<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.anshad.g_coaster.ui.cart.CartViewModel" />

        <variable
            name="adapter"
            type="com.anshad.g_coaster.ui.cart.CartItemsAdapter" />

        <variable
            name="message"
            type="String" />
        <variable
            name="isLoading"
            type="Boolean" />
        <import type="android.view.View"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="60dp"
                app:adapter="@{adapter}"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/items_list">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/empty_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cart_is_empty"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </TextView>

            <LinearLayout
                android:id="@+id/success_container"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_check"
                    android:layout_width="150dp"
                    android:layout_height="150dp">

                </ImageView>

                <TextView
                    android:textColor="@color/green"
                    android:text="@string/success"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>

                <Button
                    android:id="@+id/back"
                    android:textSize="20dp"
                    android:backgroundTint="@color/green"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/go_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Button>


            </LinearLayout>





            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/payment_data"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintBottom_toTopOf="@id/checkout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerview">

                <TextView
                    android:id="@+id/tv_total"
                    android:textSize="22dp"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

                <TextView
                    android:id="@+id/total"
                    android:textSize="22dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@{viewModel.totalAmount.toString()+ `Rs`}"
                    android:textColor="@color/black"
                    tools:text="200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="@id/tv_total"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:id="@+id/discount_in_per"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/discout_per"
                        android:text="@={viewModel.discountPercentage}"
                        android:hint="@string/discount_in_percentage"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       />
                </com.google.android.material.textfield.TextInputLayout>

               <!-- <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="@id/discount_in_per"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:id="@+id/discount_in_rs"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/discout_rs"
                        android:hint="@string/discount_in_rupees"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="@id/discount_in_per"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:id="@+id/roundoff_in_rs"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/roundoff_rs"
                        android:hint="@string/roundoff"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.roundoff}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_grant_total"
                    android:textSize="22dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/roundoff_in_rs"
                    android:text="@string/grant_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

                <TextView
                    android:id="@+id/granttotal"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/roundoff_in_rs"
                    android:text="@{viewModel.grantTotalAmount.toString()+ `Rs`}"
                    tools:text="200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>



            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/checkout"

                app:layout_constraintBottom_toBottomOf="parent">

            </Button>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loading_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@{message}"
                android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                tools:text="Loading" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>


</layout>